# Bob-Server

./: CMakeLists.txt  Server.cpp  Server.h  UServer.cpp  UServer.h  UServerT1V1.cpp  UServerT1V1.h  UServerT1V2.cpp  UServerT1V2.h  UServerT1V3.cpp  UServerT1V3.h  UServerT2V1.cpp  UServerT2V1.h  UServerT2V2.cpp  UServerT2V2.h  UServerT2V3.cpp  UServerT2V3.h  UServerV1.cpp  UServerV1.h  UServerV2.cpp  UServerV2.h  UServerV3.cpp  UServerV3.h  main.cpp  notices.txt  userverfhesiutils.cpp  userverfhesiutils.h
lib_fhe_si/FHESI/: CModulus.h  Ciphertext.h  DoubleCRT.h  FHE-SI.h  Matrix.h  NumbTh.h  PAlgebra.h  Plaintext.h  Regression.h  Serialization.h  SingleCRT.h  Statistics.h  bluestein.h
old_techniques/: CMakeLists.txt  UServer.cpp  UServer.h  UServerV1.cpp  UServerV1.h  UServerV3.cpp  main.cpp  userverfhesiutils.cpp  userverfhesiutils.h
